public/style.css
body {
    padding: 0;
    margin: 0;
    background-color: black;
}

canvas {
    vertical-align: top;
    position: absolute;
    top: 5px;
    left: 5px;
    border:4px solid #2FA1D6;
}

#svg-wrapper {
    position: absolute;
    top: 10px;
    left: 700px;
    width: 640px;
    height: 480px;
    border: 4px solid #2FA1D6;
    background-color: white;
}

#svg-as-text {
    position: absolute;
    left: 10px;
    top: 535px;
    width: 640px;
    height: 220px;
    resize: none;
    color: #2FA1D6;
    background-color: black;
    border: 4px solid white;
}

#ntTwo {
    position: absolute;
    left: 700px;
    top: 520px;
}

a {
    color: #2FA1D6;
}

p {
    font-family: "Lucida Sans Unicode", "Lucida Grande";
    font-style: normal;
    font-size: 14px;
    color: white;
}
code{
    color: #2FA1D6;
}

